istio-teaching/release/whole/argo-vs-recommendationservice-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice-vs
spec:
  hosts:
  - "recommendationservice"
  http:
  - name: http-primary
    route:
    - destination:
        host: recommendationservice
        subset: v1
        port: 
          number: 8080
      weight: 100
    - destination:
        host: recommendationservice
        subset: v2
        port: 
          number: 8080
      weight: 0
